# cmake

./: README.md
1_HellowWorld/: CMakeLists.txt  ejecutable.sh
2_BasicProject/: CMakeLists.txt
2_CMake/02_BasicProject/: ejecutable.sh  my_lib.cc
2_CMake/03_IntermediateProject/: CMakeLists.txt
2_CMake/03_IntermediateProject/app/: main.cc
2_CMake/04_VariablesOptions/: CMakeLists.txt  Makefile
2_CMake/04_VariablesOptions/app/: CMakeLists.txt
2_CMake/04_VariablesOptions/src/my_lib/: CMakeLists.txt
2_CMake/05_ConfigureFile/: CMakeLists.txt
2_CMake/05_ConfigureFile/app/: main.cc
2_CMake/06_SourcesAndHeaders/app/: CMakeLists.txt  main.cc
2_CMake/06_SourcesAndHeaders/src/my_lib/: CMakeLists.txt
2_CMake/07_ExternalGit/: CMakeLists.txt  ejecutable.sh
2_CMake/07_ExternalGit/cmake/: AddGitSubmodule.cmake
2_CMake/07_ExternalGit/config/: CMakeLists.txt
2_CMake/07_ExternalGit/src/my_lib/: my_lib.cc
2_CMake/09_Doxygen/: CMakeLists.txt  README.md
2_CMake/09_Doxygen/app/: main.cc
2_CMake/09_Doxygen/cmake/: AddGitSubmodule.cmake
2_CMake/09_Doxygen/src/my_lib/: my_lib.cc
2_CMake/10_UnitTest/: CMakeLists.txt
2_CMake/10_UnitTest/src/my_lib/: my_lib.cc
2_CMake/11_Warnings/app/: main.cc
2_CMake/11_Warnings/docs/: Doxyfile
2_CMake/12_Sanitizers/: CMakeLists.txt  README.md
2_CMake/12_Sanitizers/app/: CMakeLists.txt  main.cc
2_CMake/12_Sanitizers/cmake/: Sanitizers.cmake
2_CMake/12_Sanitizers/src/my_lib/: CMakeLists.txt
2_CMake/13_LTO/: CMakeLists.txt  README.md
2_CMake/13_LTO/app/: main.cc
2_CMake/13_LTO/cmake/: LTO.cmake
2_CMake/14_CPM/: CMakeLists.txt  README.md
2_CMake/14_CPM/cmake/: Docs.cmake  Sanitizers.cmake
2_CMake/14_CPM/src/my_lib/: CMakeLists.txt  my_lib.h
2_CMake/14_CPM/tests/: CMakeLists.txt
2_CMake/3_IntermediateProject/: ejecutable.sh
2_CMake/3_IntermediateProject/app/: CMakeLists.txt
2_CMake/3_IntermediateProject/src/my_lib/: CMakeLists.txt
2_CMake/4_VariablesOptions/src/: CMakeLists.txt
2_CMake/5_ConfigureFile/src/my_lib/: CMakeLists.txt
2_CMake/6_SourcesAndHeaders/: CMakeLists.txt
2_CMake/6_SourcesAndHeaders/config/: config.hpp.in
2_CMake/7_ExternalGit/: CMakeLists.txt
2_CMake/7_ExternalGit/app/: CMakeLists.txt  main.cc
2_CMake/8_FetchContent/: CMakeLists.txt
2_CMake/8_FetchContent/src/my_lib/: my_lib.cc
3_IntermediateProject/: CMakeLists.txt  ejecutable.sh
